@@ -1,13 +1,15 @@
 PHPUnit 3.3.15 by Sebastian Bergmann.
 
-............................................................  60 / 396
-............................................................ 120 / 396
-............................................................ 180 / 396
-............................................................ 240 / 396
-............................................................ 300 / 396
-............................................................ 360 / 396
-....................................
+............................................................  60 / 402
+............................................................ 120 / 402
+............................................................ 180 / 402
+............................................................ 240 / 402
+............................................................ 300 / 402
+............................................................ 360 / 402
+..........................................
 
-Time: 6 seconds
+Time: 28 seconds
 
-OK (396 tests, 470 assertions)
+OK (402 tests, 476 assertions)
+
+Generating code coverage report, this may take a moment.
