@@ -1,3 +1,6 @@
+03/08/2009
+- implemented {section} tag for Smarty2 BC
+
 03/07/2009
 - fixed problem with comment tags
 - fixed problem with #xxxx in double quoted string
